ปรับธีม หน้า สินค้าคงเหลือแยกตามรายสินค้า

--- a/src/app/components/forms/form-controls/base-inputs/base-inputs.component.html
+++ b/src/app/components/forms/form-controls/base-inputs/base-inputs.component.html
@@ -110,7 +110,8 @@
                 <div class="mb-3 row">
                   <label class="col-sm-3 col-form-label">Date and time</label>
                   <div class="col-sm-9">
-                    <input class="form-control digits" id="example-datetime-local-input" type="datetime-local" value="2022-01-19T18:45:00" />
+                    <input class="form-control digits" id="example-datetime-local-input"
+                     type="datetime-local" value="2022-01-19T18:45:00" />
                   </div>
                 </div>
                 <div class="mb-3 row">
