--- a/src/app/components/inventory/rp-byitem/rp-byitem.component.html
+++ b/src/app/components/inventory/rp-byitem/rp-byitem.component.html
@@ -1,7 +1,7 @@
 <app-breadcrumb
-  [title]="'สินค้าคงเหลือ (แยกตามรุ่น/Model)'"
-  [items]="['Inventory', 'Product','Forms', 'Form Widgets']"
-  [active_item]="'Ngselect'"></app-breadcrumb>
+  [title]="'สินค้าคงเหลือ (แยกตามรายการสินค้า/Item(SKU) )'"
+  [items]="['คลังสินค้า']"
+  [active_item]="'รายงานแยกตามรายการสินค้า/ByItem'"></app-breadcrumb>
 
 <div class="container-fluid">
 
@@ -70,6 +70,19 @@
               </div>
             </div>
 
+            <div class="col-sm-3">
+              <label class="col-sm-12 col-form-label">ค้นหาชื่อสินค้า</label>
+              <div class="col-sm-12">
+
+                <input
+                  class="form-control digits"
+                  type="text"
+                  [ngModel]="find_pdname"
+                  (ngModelChange)="find_pdname = $event">
+              </div>
+
+            </div>
+
           </div>
 
           <div class="row select2-drpdwn">
@@ -120,68 +133,140 @@
                     [value]="brand.brand_id">
                     {{brand.brand_name}}
                   </ng-option>
-
                 </ng-select>
-
               </div>
             </div>
 
             <div class="col-sm-3">
-              <button
-                class="btn btn-primary m-t-30 m-r-15"
-                type="submit"
-                (click)="onSearch()">
-                Search
-              </button>
+              <div class="mb-3 m-form__group">
+
+                <div class="col-form-label">เลือกรุ่น/Model</div>
+
+                <ng-select
+                  class="js-example-placeholder-multiple"
+                  id="select_model"
+                  placeholder="เลือก"
+                  [(ngModel)]="selected_model"
+                  dropdownPosition="top">
+                  <ng-option
+                    [value]="0"
+                    selected>
+                    ทั้งหมด
+                  </ng-option>
+                  <ng-option
+                    *ngFor="let model of _model_list"
+                    [value]="model.model_name">
+                    {{model.model_name}}
+                  </ng-option>
+                </ng-select>
+              </div>
             </div>
 
+            <div class="col-sm-3">
+              <div class="row">
+                <div class="col-md-12 col-lg-6 p-r-0">
+                  <button
+                    class="btn btn-primary pos_btn_default m-t-30  col-12"
+                    type="submit"
+                    (click)="onSearch()">
+                    ค้นหา
+                  </button>
+                </div>
+                <div class="col-md-12 col-lg-6 p-l-1">
+                  <button
+                    class="btn btn-light m-t-30  col-12"
+                    type="button"
+                    (click)="resetFind()">
+                    เริ่มใหม่
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
-
         </div>
 
       </div>
     </div>
   </div>
 
+
   <div class="center_div">
 
     <div
       class="loader-box"
-      [style.display]="(numberOfUnreadAlerts == 0) ? 'none' : 'block'">
+      [style.display]="(LoadingShow == 0) ? 'none' : 'block'">
       <div class="loader-4"></div>
     </div>
   </div>
 
+ <!----------------------- Start - this is data Table  ------------------------------------------>
+
+  <div class="row">
+
+    <div class="col-sm-3 p-b-10">
+      <div class="card small-widget mb-sm-0">
+        <app-sale-status [data]="stockQtyAll"></app-sale-status>
+      </div>
+    </div>
+
+    
+    <div class="col-sm-3 p-b-10">
+      <div class="card small-widget mb-sm-0">
+        <app-sale-status [data]="stockCountSKU"></app-sale-status>
+      </div>
+    </div>
+    
+    <div class="col-sm-3 p-b-10">
+      <div class="card small-widget mb-sm-0">
+        <app-sale-status [data]="stockCost"></app-sale-status>
+      </div>
+    </div>
+
+    <div class="col-sm-3 p-b-10">
+      <div class="card small-widget mb-sm-0">
+        <app-sale-status [data]="stockQtyZero"></app-sale-status>
+      </div>
+    </div>
+
+  </div> 
+
   <div class="row">
     <div class="col-sm-12">
       <div class="card">
+        <div class="card-header p-3">
+          <h5 class="pos_title"> รายการสินค้า </h5>
+          <span> แสดงจำนวนสูงสุด {{api_row_limit}} รายการเท่านั้น </span>
+        </div>
         <div class="card-body">
-
+ 
           <div class="product-list-custom custom-datatable">
             <div class="table-responsive">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">คลัง/ร้าน/Shop</th>
-                    <th scope="col">ประเภทสินค้า/Category</th>
-                    <th scope="col">ยี่ห้อ/Brand</th>
-                    <th scope="col">รุ่น/Model</th>
-                    <th
-                      class="text-end"
-                      scope="col">
+              <table class="table pos_table">
+                <thead >
+                  <tr > 
+                    <th scope="col" >คลัง/ร้าน/Shop</th>
+                    <th scope="col" >รหัส/Code/SKU</th>
+                    <th scope="col" >ประเภทสินค้า/Category</th>
+                    <th scope="col" >ยี่ห้อ/Brand</th>
+                    <th scope="col" >รุ่น/Model</th>
+                    <th scope="col" >ชื่อสินค้า/Product Name</th>
+                    <th class="text-end" scope="col">
                       จำนวน/Qty
                     </th>
                   </tr>
                 </thead>
                 <tbody>
 
-                  <tr *ngFor="let product of _vstockcard_list; index as i">
+                  <tr
+                    *ngFor="let product of _vstockcard_list; index as i"
+                    [class]="(product.qty == 0) ? 'bg_gray' : 'none'">
                     <td>{{ product.wh_name }}</td>
+                    <td>{{ product.pd_id }}</td>
                     <td>{{ product.group_name }}</td>
                     <td>{{ product.brand_name }}</td>
                     <td>{{ product.model_name }}</td>
+                    <td>{{ product.pd_name }}</td>
                     <td class="text-end">{{ product.qty | number }}</td>
-
                   </tr>
 
                 </tbody>
