--- a/src/app/components/inventory/rp-byitem/rp-byitem.component.html
+++ b/src/app/components/inventory/rp-byitem/rp-byitem.component.html
@@ -166,7 +166,7 @@
               <div class="row">
                 <div class="col-md-12 col-lg-6 p-r-0">
                   <button
-                    class="btn btn-primary pos_btn_default m-t-30  col-12"
+                    class="btn btn-primary m-t-30  col-12"
                     type="submit"
                     (click)="onSearch()">
                     ค้นหา
@@ -237,7 +237,7 @@
           <h5 class="pos_title"> รายการสินค้า </h5>
           <span> แสดงจำนวนสูงสุด {{api_row_limit}} รายการเท่านั้น </span>
         </div>
-        <div class="card-body">
+        <div class="card-body p-3">
  
           <div class="product-list-custom custom-datatable">
             <div class="table-responsive">
