--- a/src/app/components/inventory/rp-byitem/rp-byitem.component.scss
+++ b/src/app/components/inventory/rp-byitem/rp-byitem.component.scss
@@ -10,6 +10,7 @@
 }
 
 .pos_table thead tr th {  
-  color : green;
-  border-bottom: 2px solid #6EC566;
+  color : #2F9599;
+  border-bottom: 2px solid #2F9599;
 }
+ 
