--- a/src/app/components/inventory/rp-bymodel/rp-bymodel.component.scss
+++ b/src/app/components/inventory/rp-bymodel/rp-bymodel.component.scss
@@ -4,8 +4,18 @@
     }
   }
 
-.center_div{
-  position:absolute;
-  z-index:99;
-  width:100%;
-} 
+  .center_div{
+    position:absolute;
+    z-index:99;
+    width:100%;
+  } 
+
+.bg_gray{
+  background-color:rgb(233, 231, 231)  ;
+}
+
+.pos_table thead tr th {  
+  color : #2F9599;
+  border-bottom: 2px solid #2F9599;
+}
+ 
