--- a/src/app/shared/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/shared/components/breadcrumb/breadcrumb.component.html
@@ -2,7 +2,7 @@
   <div class="page-title">
     <div class="row">
       <div class="col-6">
-        <h3>{{ title }}</h3>
+        <h5 class="pos_title_page">{{ title }}</h5>
       </div>
       <div class="col-6">
         <ol class="breadcrumb">
