--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,8 +5,8 @@
     <div class="header-logo-wrapper col-auto p-0">
       <div class="logo-wrapper"> 
         <a routerLink="/">
-          <img class="img-fluid for-light" src="assets/images/logo/logo.png" alt="" />
-          <img class="img-fluid for-dark" src="assets/images/logo/logo_dark.png" alt="" />
+          <img class="img-fluid for-light" src="assets/images/logo/logo_posdiiv2.png" alt="" width="122" height="20" />
+          <img class="img-fluid for-dark" src="assets/images/logo/logo_posdiiv2.png" alt="" width="122" height="20"  />
         </a>
       </div>
       <div class="toggle-sidebar" (click)="sidebarToggle()">
