สร้างหน้า Transaction ตาม รายการสินค้า

--- a/src/app/components/transaction/rp-bydoc/rp-bydoc.component.scss
+++ b/src/app/components/transaction/rp-bydoc/rp-bydoc.component.scss
@@ -20,8 +20,8 @@
   border-bottom: 2px solid #2F9599;
 }
  
-.iv{
-    background-color:#EEF8F8  ;
+.bg_iv{
+  background-color:#ecf7f8  ;
 }
 
 .si{
