--- a/src/app/components/apps/todo/todo.component.html
+++ b/src/app/components/apps/todo/todo.component.html
@@ -7,7 +7,9 @@
         <div class="email-left-aside md-sidebar-aside">
           <div class="card">
             <div class="card-body">
+
               <div class="email-app-sidebar left-bookmark custom-scrollbar">
+
                 <div class="d-flex align-items-center">
                   <div class="media-size-email"><img class="me-3 img-40 rounded-circle" src="assets/images/user/user.png" alt="" /></div>
                   <div class="flex-grow-1">
@@ -57,13 +59,17 @@
               <div class="todo-list-container">
                 <div class="mark-all-tasks">
                   <div class="mark-all-tasks-container">
-                    <span class="mark-all-btn" id="mark-all-finished" role="button" [ngClass]="{ 'move-up': completed }" id="mark-all-finished" role="button">
+                  
+                    <span class="mark-all-btn" id="mark-all-finished" role="button" 
+                    [ngClass]="{ 'move-up': completed }" id="mark-all-finished" role="button">
+
                       <span class="btn-label">Mark all as finished</span>
                       <span class="action-box completed" (click)="markAllAction(true)">
                         <i class="icon">
                           <i class="icon-check"></i>
                         </i>
                       </span>
+
                     </span>
                     <span class="mark-all-btn move-down" id="mark-all-incomplete" role="button" [ngClass]="{ 'move-down': !completed }">
                       <span class="btn-label">Mark all as Incomplete</span
