--- a/src/app/components/forms/form-controls/form-validation/form-validation.component.html
+++ b/src/app/components/forms/form-controls/form-validation/form-validation.component.html
@@ -11,7 +11,10 @@
           ><span>When attempting to submit, you’ll see the <code class="text-danger">:invalid </code> and <code class="text-danger">:valid </code> styles applied to your form controls.</span>
         </div>
         <div class="card-body">
-          <form class="needs-validation" novalidate [ngClass]="{ 'was-validated': validate }">
+
+          <form class="needs-validation"
+           novalidate [ngClass]="{ 'was-validated': validate }">
+           
             <div class="row g-3">
               <div class="col-md-4">
                 <label class="form-label" for="validationCustom01">First name</label>
