--- a/src/app/components/transaction/rp-bytxnitem/rp-bytxnitem.component.html
+++ b/src/app/components/transaction/rp-bytxnitem/rp-bytxnitem.component.html
@@ -6,12 +6,12 @@
 <div class="container-fluid">
 
   <div class="row">
+
     <div class="col-sm-12">
 
       <div class="card">
         <div class="card-body">
           <div class="row">
-
 
             <div class="col-sm-3">
               <label class="col-sm-12 col-form-label">วันที่เอกสาร/เริ่มต้น</label>
@@ -44,44 +44,124 @@
               <div class="mb-3 m-form__group">
                 <label for="exampleFormControlSelect9">เลือกคลังสินค้า</label>
 
-                <select
-                  class="form-control digits"  id="selected_wh"
-                  placeholder="เลือก" [(ngModel)]="selected_wh">
-                  <option value="0"selected> ทั้งหมด </option>
-                  <option
+                <ng-select
+                  class="js-example-placeholder-multiple"
+                  id="selected_wh"
+                  placeholder="เลือก"
+                  [(ngModel)]="selected_wh">
+                  <ng-option
+                    value="0"
+                    selected>
+                    ทั้งหมด
+                  </ng-option>
+                  <ng-option
                     *ngFor="let wh of _inventory_list"
                     [value]="wh.wh_id">
                     {{ wh.wh_name }}
-                  </option>
-                </select>
+                  </ng-option>
+                </ng-select>
               </div>
 
             </div>
 
             <div class="col-sm-3">
-            <div class="mb-3 m-form__group">
+              <div class="mb-3 m-form__group">
 
                 <label for="exampleFormControlSelect9">ประเภทเอกสาร</label>
 
-                <select
-                  class="form-control digits"  id="selected_typeDoc"
-                  placeholder="เลือก" [(ngModel)]="selected_typeDoc">
-                  <option value="0"selected> ทั้งหมด </option>
-                  <option
+                <ng-select
+                  class="js-example-placeholder-multiple"
+                  id="selected_typeDoc"
+                  placeholder="เลือก"
+                  [(ngModel)]="selected_typeDoc">
+                  <ng-option
+                    value="0"
+                    selected>
+                    ทั้งหมด
+                  </ng-option>
+                  <ng-option
                     *ngFor="let tp of _typedoc_list"
                     [value]="tp.type_doc_id">
                     {{ tp.type_doc_name }}
-                  </option>
-                </select>
-
+                  </ng-option>
+                </ng-select>
               </div>
             </div>
-
-           
 
           </div>
 
           <div class="row select2-drpdwn">
+
+            <div class="col-sm-3">
+
+              <div class="mb-3 m-form__group">
+                <div class="col-form-label">เลือกประเภทสินค้า</div>
+                <ng-select
+                  class="js-example-placeholder-multiple"
+                  placeholder="เลือก"
+                  id="selected_category"
+                  [(ngModel)]="selected_category">
+
+                  <ng-option [value]="0">ทั้งหมด</ng-option>
+                  <ng-option
+                    *ngFor="let cat of _category_list"
+                    [value]="cat.group_id">
+                    {{cat.group_name}}
+                  </ng-option>
+                </ng-select>
+              </div>
+
+            </div>
+
+            <div class="col-sm-3">
+              <div class="mb-3 m-form__group">
+
+                <div class="col-form-label">เลือกยี่ห้อสินค้า/Brand</div>
+
+                <ng-select
+                  class="js-example-placeholder-multiple"
+                  id="selected_brand"
+                  placeholder="เลือก"
+                  [(ngModel)]="selected_brand"
+                  dropdownPosition="top">
+                  <ng-option
+                    [value]="0"
+                    selected>
+                    ทั้งหมด
+                  </ng-option>
+                  <ng-option
+                    *ngFor="let brand of _brand_list"
+                    [value]="brand.brand_id">
+                    {{brand.brand_name}}
+                  </ng-option>
+                </ng-select>
+              </div>
+            </div>
+
+            <div class="col-sm-3">
+              <div class="mb-3 m-form__group">
+
+                <div class="col-form-label">เลือกรุ่น/Model</div>
+
+                <ng-select
+                  class="js-example-placeholder-multiple"
+                  id="select_model"
+                  placeholder="เลือก"
+                  [(ngModel)]="selected_model"
+                  dropdownPosition="top">
+                  <ng-option
+                    [value]="0"
+                    selected>
+                    ทั้งหมด
+                  </ng-option>
+                  <ng-option
+                    *ngFor="let model of _model_list"
+                    [value]="model.model_name">
+                    {{model.model_name}}
+                  </ng-option>
+                </ng-select>
+              </div>
+            </div>
 
             <div class="col-sm-3">
               <label class="col-sm-12 col-form-label">ค้นหาชื่อลูกค้า</label>
@@ -97,36 +177,54 @@
             </div>
 
             <div class="col-sm-3">
-              &nbsp;
-           </div>
+              <label class="col-sm-12 col-form-label">ค้นหาชื่อสินค้า</label>
+              <div class="col-sm-12">
 
-           <div class="col-sm-3">
-               &nbsp;
-           </div>
+                <input
+                  class="form-control digits"
+                  type="text"
+                  [ngModel]="find_pdname"
+                  (ngModelChange)="find_pdname = $event">
+              </div>
+
+            </div>
+
+            <div class="col-sm-3"></div>
+
+            <div class="col-sm-3"></div>
 
             <div class="col-sm-3">
               <div class="row">
                 <div class="col-md-12 col-lg-6 p-r-0">
-                  <button class="btn btn-primary m-t-30  col-12"
-                    type="submit" (click)="onSearch()">
-                    ค้นหา
-                  </button>
+                  <a
+                    class="btn btn-primary m-t-30 w-100"
+                    type="button"
+                    title
+                    (click)="onSearch()">
+                    <i class="icofont icofont-search"></i>
+                    Search
+                  </a>
                 </div>
                 <div class="col-md-12 col-lg-6 p-l-1">
-                  <button class="btn btn-light m-t-30  col-12"
-                    type="button" (click)="resetFind()">
-                    เริ่มใหม่
-                  </button>
+
+                  <a
+                    class="btn btn-light m-t-30"
+                    type="button"
+                    title
+                    (click)="resetFind()">
+                    <i class="icon-reload"></i>
+                    Reset
+                  </a>
                 </div>
               </div>
             </div>
+
           </div>
         </div>
 
       </div>
     </div>
   </div>
-
 
   <div class="center_div">
 
@@ -137,7 +235,7 @@
     </div>
   </div>
 
- <!----------------------- Start - this is data Table  ------------------------------------------>
+  <!-- --------------------- Start - this is data Table  ---------------------------------------- -->
 
   <div class="row">
 
@@ -147,13 +245,12 @@
       </div>
     </div>
 
-    
     <div class="col-sm-3 p-b-10">
       <div class="card small-widget mb-sm-0">
         <app-sale-status [data]="stockCountSKU"></app-sale-status>
       </div>
     </div>
-    
+
     <div class="col-sm-3 p-b-10">
       <div class="card small-widget mb-sm-0">
         <app-sale-status [data]="stockCost"></app-sale-status>
@@ -166,73 +263,110 @@
       </div>
     </div>
 
-  </div> 
+  </div>
 
   <div class="row">
-    <div class="col-sm-12">
-      <div class="card">
-        <div class="card-header p-4">
-          <h5 class="pos_title"> รายการสินค้า </h5>
-          <span> แสดงจำนวนสูงสุด {{api_row_limit}} รายการเท่านั้น </span>
-        </div>
-        <div class="card-body p-3">
- 
-          <div class="product-list-custom custom-datatable">
-            <div class="table-responsive">
-              <table class="table pos_table">
-                <thead >
-                  <tr > 
-                    <th scope="col"  style="width:180px;">วันที่เอกสาร/DocDate</th>                                                                                          
-                    <th scope="col" >ประเภทเอกสาร/TypeDoc</th>
-                    <!-- <th scope="col" >ชื่อลูกค้า/Customer</th> -->
-                    <th scope="col" >row_key</th>
-                    <th scope="col" >ประเภทสินค้า</th>
-                    <th scope="col" >ยี่ห้อ/brand</th>
-                    <th scope="col" >รุ่น/model</th>
-                    <th scope="col" > ชื่อสินค้า </th>
-                                        
-                    <th class="text-end" scope="col">จำนวนสินค้า/Qty</th>
-                    <th class="text-end" scope="col">ต้นทุนรวม/Cost</th>
-                    <th class="text-end" scope="col">ยอดขาย/Amount</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr
-                    *ngFor="let product of _vstockcard_list; index as i"
-                    [class]="(product.row_key%2==0) ? 'bg_iv' : 'none'"
-                    >                                        
-                    <td class="robo">{{ product.date_in| date:'dd-MM-yyyy hh:mm' }}
-                        <br/><span class="table_row_sub"> <i class="fa fa-home"></i> {{ product.wh_name }} </span>
-                    </td>                    
-                    <td>
-                        {{ product.type_doc }}                      
-                        <br/><span class="table_row_sub"><i class="icofont icofont-ebook"></i> {{ product.doc_id }} </span>
-                    </td>                    
-                    <!-- <td>{{ product.cust_fname }}</td> -->
-                    <td>{{ product.row_key }}</td>  
-                    <td>{{ product.group_name }}</td>                    
-                    <td>{{ product.brand_name }}</td>                    
-                    <td>{{ product.model_name }}</td>                    
-                    <td>{{ product.pd_name }}</td> 
-                    <td class="text-end robo">{{ product.qty | number }}</td>
-                    <td class="text-end robo">{{ product.amt_cost | number }}</td>
-                    <td class="text-end robo">{{ product.amt_price | number }}</td>
-                  </tr>
- 
-                </tbody>
-              </table>
+    <div class="bookmark-tabcontent">
+      <div class="tab-content">
+
+        <div class="col-sm-12">
+          <div class="card">
+            <div class="card-header d-flex">
+
+              <span>                
+                <h5 class="pos_title"> รายการสินค้า </h5>                
+                <span> แสดงจำนวนสูงสุด {{api_row_limit}} รายการเท่านั้น </span>
+              </span>
+
+              <a href="javascript:void(0)">
+                <i class="icofont icofont-file-excel"></i>
+                Export Data
+              </a>
+
             </div>
+            <div class="card-body p-3">
+
+              <div class="product-list-custom custom-datatable">
+                <div class="table-responsive">
+                  <table class="table pos_table">
+                    <thead>
+                      <tr>
+                        <th
+                          scope="col"
+                          style="width:180px;">
+                          วันที่เอกสาร/DocDate
+                        </th>
+                        <th scope="col">ประเภทเอกสาร/TypeDoc</th>
+                        <!-- <th scope="col" >ชื่อลูกค้า/Customer</th> -->
+                        <!-- <th scope="col" >row_key</th> -->
+                        <th scope="col">ประเภทสินค้า</th>
+                        <th scope="col">ยี่ห้อ/brand</th>
+                        <th scope="col">รุ่น/model</th>
+                        <th scope="col">ชื่อสินค้า</th>
+
+                        <th
+                          class="text-end"
+                          scope="col">
+                          จำนวนสินค้า/Qty
+                        </th>
+                        <th
+                          class="text-end"
+                          scope="col">
+                          ต้นทุนรวม/Cost
+                        </th>
+                        <th
+                          class="text-end"
+                          scope="col">
+                          ยอดขาย/Amount
+                        </th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr
+                        *ngFor="let product of _vstockcard_list; index as i"
+                        [class]="(product.row_key%2==0) ? 'bg_iv' : 'none'">
+                        <td class="robo">
+                          {{ product.date_in| date:'dd-MM-yyyy hh:mm' }}
+                          <br>
+                          <span class="table_row_sub"> <i class="fa fa-home"></i> {{ product.wh_name }} </span>
+                        </td>
+                        <td>
+                          {{ product.type_doc }}
+                          <br>
+                          <span class="table_row_sub"><i class="icofont icofont-ebook"></i> {{ product.doc_id }} </span>
+                        </td>
+                        <!-- <td>{{ product.cust_fname }}</td> -->
+                        <!-- <td>{{ product.row_key }}</td> -->
+                        <td>{{ product.group_name }}</td>
+                        <td>{{ product.brand_name }}</td>
+                        <td>{{ product.model_name }}</td>
+                        <td>
+                          {{ product.pd_name }}
+                          <br>
+                          <span class="table_row_sub"><i class="icofont icofont-businessman"></i>{{ product.cust_fname }} </span>
+                        </td>
+                        <td class="text-end robo">{{ product.qty_abs | number }}</td>
+                        <td class="text-end robo">{{ product.amt_cost | number }}</td>
+                        <td class="text-end robo">{{ product.amt_price | number }}</td>
+                      </tr>
+
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+              <!-- ./product-list -->
+
+            </div>
+            <!-- ./card-body -->
+
           </div>
-          <!-- ./product-list -->
-
+          <!-- ./card -->
         </div>
-        <!-- ./card-body -->
-
+        <!-- ./col-sm-12 -->
       </div>
-      <!-- ./card -->
+      <!-- ./ tab-content -->
     </div>
-    <!-- ./col-sm-12 -->
-
+    <!-- ./ bookmark-tabcontent -->
   </div>
   <!-- ./row -->
 </div>
