--- a/src/app/components/transaction/stock-receive/str-list/str-list.component.html
+++ b/src/app/components/transaction/stock-receive/str-list/str-list.component.html
@@ -1,121 +1,217 @@
-
-<app-breadcrumb [title]="'รายการรับสินค้าเข้าคลัง'" [items]="['Stockcard']" [active_item]="'List by Group'"></app-breadcrumb>
+<app-breadcrumb
+  [title]="'เอกสารรับสินค้าเข้าคลัง (Stock-In)'"
+  [items]="['รายการประจำวัน']"
+  [active_item]="'แสดงจามรายการเอกสาร'"></app-breadcrumb>
 
 <div class="container-fluid">
 
   <div class="row">
-      <div class="col-sm-12">
-         
+    <div class="col-sm-12">
 
-        <div class="card">   
+      <div class="card">
+        <div class="card-body">
+          <div class="row">
 
-          <div class="card-body"> 
-              
+
+            <div class="col-sm-3">
+              <label class="col-sm-12 col-form-label">วันที่เอกสาร/เริ่มต้น</label>
+              <div class="col-sm-12">
+
+                <input
+                  class="form-control digits"
+                  type="date"
+                  [ngModel]="select_date_st | date:'yyyy-MM-dd'"
+                  (ngModelChange)="select_date_st = $event">
+              </div>
+
+            </div>
+
+            <div class="col-sm-3">
+              <label class="col-sm-12 col-form-label">วันที่เอกสาร/สิ้นสุด</label>
+              <div class="col-sm-12">
+
+                <input
+                  class="form-control digits"
+                  type="date"
+                  [ngModel]="select_date_en | date:'yyyy-MM-dd'"
+                  (ngModelChange)="select_date_en = $event">
+              </div>
+
+            </div>
+
+            <div class="col-sm-3">
+
+              <div class="mb-3 m-form__group">
+                <label for="exampleFormControlSelect9">เลือกคลังสินค้า</label>
+
+                <select
+                  class="form-control digits"  id="selected_wh"
+                  placeholder="เลือก" [(ngModel)]="selected_wh">
+                  <option value="0"selected> ทั้งหมด </option>
+                  <option
+                    *ngFor="let wh of _inventory_list"
+                    [value]="wh.wh_id">
+                    {{ wh.wh_name }}
+                  </option>
+                </select>
+              </div>
+
+            </div>
+            
+            <div class="col-sm-3">
+              <label class="col-sm-12 col-form-label">ค้นหาชื่อผู้จำหน่าย (Supplier)</label>
+              <div class="col-sm-12">
+
+                <input
+                  class="form-control digits"
+                  type="text"
+                  [ngModel]="find_cust_name"
+                  (ngModelChange)="find_cust_name = $event">
+              </div>
+
+            </div>
+          </div>
+
+          <div class="row">
+
+            <div class="col-sm-3">
+              &nbsp;
+           </div>
+
+            <div class="col-sm-3">
+              &nbsp;
+           </div>
+
+           <div class="col-sm-3">
+               &nbsp;
+           </div>
+
+           <div class="col-sm-3">
             <div class="row">
-
-              <div class="col-sm-3">
-                <label class="col-sm-12 col-form-label">  วันที่ทำรายการ-จาก  </label>
-                <div class="col-sm-12">
-                  <input class="form-control digits" type="date" value="2022-01-01" />
-                </div>
+              <div class="col-md-12 col-lg-6 p-r-0"> 
+                <a class="btn btn-primary m-t-30 w-100" type="button" title=""  
+                (click)="onSearch()">
+                  <i class="icofont icofont-search"></i> Search
+                </a> 
               </div>
-              <div class="col-sm-3">
-                <label class="col-sm-12 col-form-label">  ถึง  </label>
-                <div class="col-sm-12">
-                  <input class="form-control digits" type="date" value="2022-01-01" />
-                </div>
-              </div>
+              <div class="col-md-12 col-lg-6 p-l-1">
 
-              <div class="col-sm-3">
-                  <div class="mb-3 m-form__group">
-                      <label for="exampleFormControlSelect9">เลือกคลังสินค้า</label>
-                      <select class="form-control digits" id="exampleFormControlSelect9">
-                        <option>ทั้งหมด</option>
-                        <option>Big-C ชลบุรี</option>
-                        <option>Central ชิดลม</option>
-                        <option>Stock มือสอง</option>                          
-                      </select>
-                  </div>
-              </div> 
-              
-              <div class="col-sm-3">
-                <button class="btn btn-lg btn-primary m-t-30 m-r-15" type="submit"> Search</button>
+                <a class="btn btn-light m-t-30  " type="button" title=""  
+                (click)="resetFind()">
+                  <i class="icon-reload"></i> Reset
+                </a> 
               </div>
- 
-            </div> 
-
+            </div>
           </div>
 
 
+          </div>
         </div>
+
       </div>
+    </div>
   </div>
-  
+
+
+  <div class="center_div">
+
+    <div
+      class="loader-box"
+      [style.display]="(LoadingShow == 0) ? 'none' : 'block'">
+      <div class="loader-4"></div>
+    </div>
+  </div>
+
+ <!----------------------- Start - this is data Table  ------------------------------------------>
+
+  <div class="row">
+
+    <div class="col-sm-4 p-b-10">
+      <div class="card small-widget mb-sm-0">
+        <app-sale-status [data]="stockQtyAll"></app-sale-status>
+      </div>
+    </div>
+
     
+    <div class="col-sm-4 p-b-10">
+      <div class="card small-widget mb-sm-0">
+        <app-sale-status [data]="stockCountSKU"></app-sale-status>
+      </div>
+    </div>
     
+    <div class="col-sm-4 p-b-10">
+      <div class="card small-widget mb-sm-0">
+        <app-sale-status [data]="stockCost"></app-sale-status>
+      </div>
+    </div>
 
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="card">              
-                <div class="card-body">
 
-                    <div class="product-list-custom custom-datatable">
-                        <div class="table-responsive ">
-                          <table class="table table-bordered">
-                            <thead class="bg-green">
-                              <tr>                                
-                                <th scope="col">รหัสเอกสาร</th>                                
-                                <th scope="col">วันที่ทำรายการ</th>
-                                <th scope="col">คลัง/ร้าน/Shop</th>
-                                <th scope="col">ประเภทสินค้า/Category</th>
-                                <th scope="col">ยี่ห้อ/Brand</th>
-                                <th scope="col">รุ่น/Model</th>
-                                <th scope="col">สี/Color</th>                                
-                                <th scope="col">Barcode</th> 
-                                <th class="text-end" scope="col">จำนวน/Qty</th>
-                              </tr>
-                            </thead>
-                            <tbody>
+  </div> 
 
-                              <tr *ngFor="let stk of Stockcard; index as i">
-                                <td>
-                                    {{ stk.doc_id }} 
-                                  </td>  
-                                  <td>
-                                    {{ stk.doc_date }} 
-                                  </td>  
-                                  <td>
-                                    {{ stk.wh_name }} 
-                                  </td> 
-                                <td>
-                                  {{ stk.group_name }} 
-                                </td>  
-                                <td>
-                                    {{ stk.brand_name }} 
-                                </td>
-                                <td>                                  
-                                    {{ stk.model_name }}
-                                </td>                                
-                                <td>                                  
-                                    {{ stk.color }}
-                                </td>   
-                                <td>                                  
-                                    {{ stk.bar_code }}
-                                </td>                                
-                                <td class="text-end">
-                                    {{ stk.qty | number }}
-                                </td>
-                              </tr>
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="card">
+        <div class="card-header p-4">
+          <h5 class="pos_title"> เอกสารรับสินค้าเข้าคลัง </h5>
+          <span> แสดงจำนวนสูงสุด {{api_row_limit}} รายการเท่านั้น </span>
+        </div>
+        <div class="card-body p-3">
+ 
+          <div class="product-list-custom custom-datatable">
+            <div class="table-responsive">
+              <table class="table pos_table">
+                <thead >
+                  <tr > 
+                    <th scope="col" ></th>  
+                    <th scope="col" >วันที่เอกสาร/DocDate</th>                                                      
+                    <th scope="col" >คลัง/ร้าน/Shop</th>                    
+                    <th scope="col" >ประเภทเอกสาร/TypeDoc</th>
+                    <th scope="col" >เลขที่เอกสาร/DocId</th>
+                    <th scope="col" >ชื่อลูกค้า/Customer</th>                    
+                    <th class="text-end" scope="col">จำนวนสินค้า/Qty</th>
+                    <th class="text-end" scope="col">ต้นทุนรวม/Cost</th>
+                    
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr
+                    *ngFor="let product of _vstockcard_list; index as i"
+                    [class]="(product.amt_price > 0) ? 'bg_iv' : 'none'"
+                    >                                        
+                    <td>
 
-                            </tbody>
-                          </table>
-                        </div>
-                    </div><!--./product-list-->
+                      <a class="btn btn-primary p-y-1  " style="font-size:10px;" type="button" title="" >
+                        <i class="icofont icofont-search"></i> 
+                      </a> 
 
-                </div><!--./card-body-->
+                    </td>                    
+                    <td class="robo">{{ product.date_in| date:'dd-MM-yyyy hh:mm' }}</td>                    
+                    <td>{{ product.wh_name }}</td>                    
+                    <td >                       
+                        {{ product.type_doc }}                      
+                    </td>
+                    <td style="font-size: 12px;">{{ product.doc_id }}</td>
+                    <td>{{ product.cust_fname }}</td>
+                    
+                    <td class="text-end robo">{{ product.qty | number }}</td>
+                    <td class="text-end robo">{{ product.amt_cost | number }}</td>                    
+                  </tr>
+ 
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <!-- ./product-list -->
 
-            </div><!--./card-->
-        </div><!--./col-sm-12-->
+        </div>
+        <!-- ./card-body -->
 
-    </div> <!--./row-->
-</div>    <!--./container-fluid-->
+      </div>
+      <!-- ./card -->
+    </div>
+    <!-- ./col-sm-12 -->
+
+  </div>
+  <!-- ./row -->
+</div>
+<!-- ./container-fluid -->
